<resources>
    <string name="app_name">Covid Node Trace</string>
    <string name="screen_state">Screen State</string>
    <string name="action_settings">Settings</string>

    <string name="communication_type_state">Communication State</string>

    <!-- Strings used for fragments for navigation -->
    <string name="welcome_fragment_label">Welcome Fragment</string>
    <string name="health_status_fragment_label">Health Status Fragment</string>
    <string name="contact_fragment_label">Contact Fragment</string>
    <string name="settings_fragment_label">Settings Fragment</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="shared_preferences">shared_preferences</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_screen">Welcome Screen</string>
    <string name="welcome_explanation">
        Welcome to the Covid-19 Node Tracer app.
        With this application you can track whether you have been in contact with someone who had Covid-19.
    </string>
    <string name="welcome_screen_button">Start</string>
    <string name="welcome_menu">Introduction</string>
    <string name="health_status_menu">Health Status</string>
    <string name="contact_menu">Contacts</string>
    <string name="settings_menu">Settings</string>
    <string name="update_health_status_button">Submit</string>
    <string name="update_health_status_sheet_button">Update my status</string>
    <string name="cancel_health_status_button">Cancel</string>
    <string name="health_status">""</string>

    <string name="health_title">Health status</string>
    <string name="contact_health_status">""</string>
    <string name="contact_date">""</string>
    <string name="contact_time">""</string>
    <string name="contact_duration">""</string>
    <string name="contact_distance">""</string>

    <string name="date_title">"Date"</string>
    <string name="duration_title">"Duration"</string>
    <string name="distance_title">"Distance"</string>

    <string name="health_status_title">Health Status</string>
    <string name="health_status_sub_header">My health status:</string>
    <string name="history_sheet_title">Node Contacts</string>
    <string name="row_contact_health_status">"Status"</string>
    <string name="row_contact_date">"Date"</string>
    <string name="row_contact_duration">"Duration"</string>
    <string name="row_contact_distance">"Distance"</string>
    <string name="row_contact_location">"Location"</string>

    <string name="settings_privacy_title">Privacy</string>
    <string name="privacy_explanation">
        This application does not share your private data with any users or 3rd parties.
        The data is kept encrypted on your device only
    </string>
    <string name="type_title">Mode</string>
    <string name="node_title">Node</string>
    <string name="user_title">User</string>
    <string name="type_explanation">
        Nodes will advertise a bluetooth ID, while a User scans for bluetooth IDs
    </string>
    <string name="dev_mode">Development mode</string>

    <string name="permission_rationale_positive">Grant Permission</string>
    <string name="permission_rationale_negative">Cancel</string>
    <string name="fine_location_rationale_title">Bluetooth / Location permission</string>
    <string name="fine_location_rationale_text">Android requires that Bluetooth apps require Location permission. Your location will remain private and will not be shared with anyone</string>
    <string name="storage_rationale_title">Storage permission</string>
    <string name="storage_rationale_text">The app needs your permission to store data on the phone</string>
</resources>