<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:weightSum="4"
    android:orientation="horizontal"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/row_contact_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_anchorGravity="right|center_vertical"
        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:text="@string/row_contact_date"
        android:textSize="14sp"
        android:textStyle="bold"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="false"/>


    <TextView
        android:id="@+id/row_contact_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_anchor="@+id/row_contact_date"
        app:layout_anchorGravity="right|center_vertical"
        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:text="@string/row_contact_duration"
        android:textSize="14sp"
        android:textStyle="bold"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="false"/>


    <TextView
        android:id="@+id/row_contact_distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_anchorGravity="right|center_vertical"
        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:text="@string/row_contact_distance"
        android:textSize="14sp"
        android:textStyle="bold"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="false"/>


    <TextView
        android:id="@+id/row_contact_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_anchor="@+id/row_contact_date"
        app:layout_anchorGravity="right|center_vertical"
        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:text="@string/row_contact_location"
        android:textSize="14sp"
        android:textStyle="bold"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="false"/>
</LinearLayout>