<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="16">


            <TextView
                android:id="@+id/actions_title"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_32"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_16"
                android:gravity="center_vertical"
                android:text="@string/status_title"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/health_status_title"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_32"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginStart="@dimen/dp_16"
                    android:gravity="center_vertical"
                    android:text="@string/health_status_title"
                    android:textSize="16sp" />
                <Button
                    android:id="@+id/update_health_status_sheet_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginStart="@dimen/dp_16"
                    android:text="@string/update_health_status_sheet_button"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/communication_mode_status"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_32"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginStart="@dimen/dp_16"
                    android:gravity="center"
                    android:text="@string/communication_mode_status"
                    android:textSize="16sp" />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/bluetooth_signal"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/bluetooth_gif"/>
            </LinearLayout>

            <TextView
                android:id="@+id/node_contact_title"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_32"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/node_contact_title"
                android:textSize="24sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/contact_map_card"
                    android:layout_gravity="center"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginRight="10dp"
                    app:cardCornerRadius="100dp">

                    <com.google.android.gms.maps.MapView
                        android:id="@+id/contact_map"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />

                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/health_title"
                        android:visibility="invisible"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/health_title"
                        android:textSize="12sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/contact_health_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_health_status"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/date_title"
                        android:visibility="invisible"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/date_title"
                        android:textSize="12sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/contact_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_date"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/duration_title"
                        android:visibility="invisible"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/duration_title"
                        android:textSize="12sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/contact_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/contact_duration"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/distance_title"
                        android:visibility="invisible"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/distance_title"
                        android:textSize="12sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/contact_distance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/contact_distance"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <include layout="@layout/contact_history_sheet" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>