<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/welcome_screen_graphic"
            android:layout_width="match_parent"
            android:layout_height="365dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_welcome_screen_graphic" />

        <TextView
            android:id="@+id/welcome_screen_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcome_screen_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/welcome_explanation"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:textSize="24sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/welcome_screen_button"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>