<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:weightSum="4"
        android:orientation="horizontal"
        android:background="@drawable/row">

        <TextView
            android:id="@+id/date_health_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            app:layout_anchorGravity="right|center_vertical"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:text="@string/row_contact_health_status"
            android:textSize="12sp"
            android:textStyle="bold"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"/>

        <TextView
            android:id="@+id/date_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            app:layout_anchorGravity="right|center_vertical"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:text="@string/row_contact_date"
            android:textSize="12sp"
            android:textStyle="bold"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"/>


        <TextView
            android:id="@+id/duration_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_anchor="@+id/row_contact_date"
            app:layout_anchorGravity="right|center_vertical"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:text="@string/row_contact_duration"
            android:textSize="12sp"
            android:textStyle="bold"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"/>


        <TextView
            android:id="@+id/location_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_anchor="@+id/row_contact_date"
            app:layout_anchorGravity="right|center_vertical"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:text="@string/row_contact_location"
            android:textSize="12sp"
            android:textStyle="bold"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>