<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:id="@+id/bottom_sheet"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:clipToPadding="true"
    android:background="@drawable/rounded_dialog"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/health_status_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_32"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:gravity="center"
            android:text="@string/health_status_title"
            android:textSize="20sp" />
        <Button
            android:id="@+id/update_health_status_sheet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/update_health_status_sheet_button"/>

        <TextView
            android:id="@+id/bottom_sheet_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_32"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:gravity="center"
            android:text="@string/history_sheet_title"
            android:textSize="20sp" />

        <include layout="@layout/contact_history_title_row" />

        <ListView
            android:id="@+id/contact_history_list_view"
            android:layout_width="fill_parent"
            android:layout_height="450dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:drawSelectorOnTop="false"
            android:listSelector="@color/grey"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>